fix(form): fix alignment issues of checkbox & switch in forms

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -120,10 +120,16 @@
 .form-group {
     limel-checkbox,
     limel-switch {
-        margin-left: functions.pxToRem(8);
+        // This is because we have to align these items to top and
+        // make sure they align correctly even in one-columned layouts
+        margin-top: functions.pxToRem(8);
+        display: block;
         min-height: calc(
             var(--min-height-of-one-row) - #{shared_input-select-picker.$height-of-mdc-helper-text-block}
-        ); //This is because we have to align these items to top and make sure they align correctly even in one-columned layouts
+        );
+    }
+    limel-switch {
+        margin-left: functions.pxToRem(8);
     }
 }
 
